MultiIV Life Server Config

--- a/packages/Life/package.json
+++ b/packages/Life/package.json
@@ -5,6 +5,10 @@
             "filepath": "main.server.nut",
             "type": "server"
         },
+		{
+			"filepath": "main.server.conf.nut",
+			"type": "server"
+		},
         {
             "filepath": "main.client.nut",
             "type": "client"
