MultiIV Life add Auto Broadcast Function
add new function and fix something and more

--- a/packages/Life/package.json
+++ b/packages/Life/package.json
@@ -9,6 +9,10 @@
 			"filepath": "main.server.conf.nut",
 			"type": "server"
 		},
+		{
+			"filepath": "server.event.nut",
+			"type": "server"
+		},
         {
             "filepath": "main.client.nut",
             "type": "client"
