add MySQL Module

--- a/multiv_server.conf
+++ b/multiv_server.conf
@@ -4,7 +4,7 @@
    "anticheat" : true,
    "gamemode" : "MultIV Life[V: Test 1.0]",
    "ip" : "",
-   "modules" : [ "Squirrel", "Lua" ],
+   "modules" : [ "Squirrel", "Lua", "miv-mysql" ],
    "packages" : [ "console", "Life" ],
    "password" : "",
    "port" : 5000,
