added mysql function and config file for mysql

--- a/packages/Life/package.json
+++ b/packages/Life/package.json
@@ -10,6 +10,10 @@
 			"type": "server"
 		},
 		{
+			"filepath": "life.mysqlfunc.nut",
+			"type": "server"
+		},
+		{
 			"filepath": "server.event.nut",
 			"type": "server"
 		},
