Fix some Life mysql function error

--- a/packages/Life/package.json
+++ b/packages/Life/package.json
@@ -10,7 +10,7 @@
 			"type": "server"
 		},
 		{
-			"filepath": "life.mysqlfunc.nut",
+			"filepath": "main.life.mysqlfunc.nut",
 			"type": "server"
 		},
 		{
