Add MultIV Life Logo

--- a/packages/Life/package.json
+++ b/packages/Life/package.json
@@ -23,6 +23,10 @@
         }
     ],
     "assets": [
+		{
+			"filepath": "multIV_life_logo.png",
+			"type": "client"
+		},
         {
             "filepath": "trollface.png",
             "type": "client"
