--- a/packages/Life/package.json
+++ b/packages/Life/package.json
@@ -6,15 +6,19 @@
             "type": "server"
         },
 		{
-			"filepath": "main.server.conf.nut",
-			"type": "server"
-		},
-		{
 			"filepath": "main.life.mysqlfunc.nut",
 			"type": "server"
 		},
 		{
 			"filepath": "server.event.nut",
+			"type": "server"
+		},
+		{
+			"filepath": "/config/server.conf.nut",
+			"type": "server"
+		},
+		{
+			"filepath": "/config/mysql.conf.nut",
 			"type": "server"
 		},
         {
