reconfig server setting

--- a/multiv_server.conf
+++ b/multiv_server.conf
@@ -5,7 +5,7 @@
    "gamemode" : "MultIV Life[V: Test 1.0]",
    "ip" : "",
    "modules" : [ "Squirrel", "Lua", "miv-mysql" ],
-   "packages" : [ "console", "Life" ],
+   "packages" : [ "Life" ],
    "password" : "",
    "port" : 5000,
    "servername" : "Default MultIV Life Server(Version Test 1.0)",
