update console commands and fix problem

--- a/packages/Life/package.json
+++ b/packages/Life/package.json
@@ -18,6 +18,10 @@
 			"type": "server"
 		},
 		{
+			"filepath": "server/console.nut",
+			"type": "server"
+		},
+		{
 			"filepath": "server.event.nut",
 			"type": "server"
 		},
