Added Main Life Server Function

--- a/packages/Life/package.json
+++ b/packages/Life/package.json
@@ -9,6 +9,10 @@
 			"filepath": "../../Cfg/mysql.conf.nut",
 			"type": "server"
 		},
+		{
+			"filepath": "main.life.serverfunc.nut",
+			"type": "server"
+		},
         {
             "filepath": "main.server.nut",
             "type": "server"
